--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": [
-      "jquery",
-      "materialize-css"]
+    "types": []
   },
   "exclude": [
     "src/test.ts",
